Fixed hyperlinks not being visible in dark mode

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -61,7 +61,7 @@ footer {
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: hsla(160, 100%, 37%, 1) !important;
   transition: 0.2s;
 }
 
